# TMVisDB

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  TODO.txt  backend.Dockerfile  db-scheme.mermaid  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  frontend.Dockerfile  package.json  pnpm-lock.yaml  releaserc.toml  tmvsidb.code-workspace
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 5e0282159f91_include_all_models.py  64d65e3123c2_include_all_models.py
backend/app/: __init__.py  crud.py  definitions.py  main.py  models.py  taxonomy_enums.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: annotations.py  info.py  proteins.py
backend/app/api/routes/proteins/: __init__.py  by_id.py  by_lineage.py  by_organism.py  random.py
backend/app/core/: config.py  database.py
backend/db_management/: migrate_indices.py  show_db_diff.py
backend/scripts/: generate_client.py
backend/src/tmvisdb_backend/: __init__.py  crud.py  lineage_definitions.py  models.py
backend/src/tmvisdb_backend/api/routes/: annotations.py  proteins.py
backend/src/tmvisdb_backend/core/: config.py  database.py
backend/tools/: migrate_indices.py
docs/: db-scheme.mermaid
frontend/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite-env.d.ts  vite.config.ts
scripts/: backend-entrypoint.sh  (+4 more)
(+169 files in other folders)
