[project]
name = "tmvisdb-backend"
version = "0.1.0"
description = "API for the tmvis project database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114.0",
    "pydantic>=2.9.0",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"