[project]
name = "app"
version = "1.3.1"
description = "API for the tmvis project database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.9.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.3",
]
